apps/hct-color-picker/ui-src/components/hct-controller/hct-controller.scss
@mixin thumb {
  appearance: none;
  width: var(--mrd-space-400);
  background-color: unset;
  border: none;
}

mrd-range::part(slot-container) {
  border: 1px solid var(--mrd-color-outline);
  height: var(--mrd-space-600);
  background: var(
    --mrd-range-preview-background,
    var(--mrd-color-background-surface)
  );
}

.invisible-color-range {
  appearance: none;
  display: flex;
  flex: 1;
  height: 100%;

  &::-moz-range-thumb {
    @include thumb;
  }

  &::-webkit-slider-thumb {
    @include thumb;
  }

  &::-ms-thumb {
    @include thumb;
  }
}

.slider-container {
  display: flex;
  flex-direction: column;
  gap: var(--mrd-space-200);
}

.input-title-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

input[type='number'] {
  overflow: hidden;
  padding: var(--mrd-space-100) var(--mrd-space-200);
  width: 3.5rem;
  border: 1px solid var(--mrd-color-outline);
  border-radius: var(--mrd-border-radius-100);
  color: var(--mrd-color-background-on-base);

  &:hover,
  &:focus {
    transition: all var(--mrd-transition-default);
    border-color: var(--mrd-color-primary-base);
  }
}

